--- a/style.css
+++ b/style.css
@@ -1,3 +1,44 @@
+.four {
+    background: #F4F7EE;
+    padding: 50px 20px;
+    text-align: center;
+}
+.four h1 {
+    font-family: 'Merriweather', serif;
+    position: relative;
+    color: #C44737;
+    font-size: 50px;
+    font-weight: normal;
+    padding: 8px 20px 7px 20px;
+    border-top: 4px solid;
+    border-left: 4px solid;
+    display: inline-block;
+    margin: 0;
+    line-height: 1;
+}
+.four h1:before {
+    content: "";
+    position: absolute;
+    width: 28px;
+    height: 28px;
+    top: -28px;
+    left: -28px;
+    border: 4px solid #C44737;
+    box-sizing: border-box;
+}
+@media (max-width: 450px) {
+    .four h1 {font-size: 36px;}
+    .four h1:before {
+        width: 20px;
+        height: 20px;
+        top: -20px;
+        left: -20px;
+    }
+}
+
+
+
+
 p{
     font-family: Arial;
 }
@@ -27,12 +68,6 @@ body{
     top: 10%;
     left: 3%;
 }
-.ul-style{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
 .li-style {
     float: left;
 }
@@ -45,11 +80,7 @@ body{
     padding: 8px;
     background-color: darkkhaki;
 }
-.table-style{
-    margin-left: 2%;
-    background-color: azure;
-    font-size: large;
-}
+
 .rounded {
     counter-reset: li;
     list-style: none;
