--- a/style/main_style.css
+++ b/style/main_style.css
@@ -1,103 +1,153 @@
 *, html {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
 }
-body{
+
+body {
     background-image: url("../images/books_bg.gif");
 }
-p{
+
+p {
     font-family: "Open Sans", sans-serif;
     font-size: 30px;
 }
-.container{
+
+.container {
     width: 100%;
     max-width: 1100px;
     padding: 0;
     margin: 0 auto;
 }
-.header{
+
+.header {
     background-color: #0b1101;
     height: 95px;
     font-family: "Open Sans", sans-serif;
 }
-.main{
+
+.main {
     background-color: #eeeeee;
     height: 600px;
     font-family: "Open Sans", sans-serif;
     display: flex;
 }
-.best-lib{
+
+.best-lib {
     width: 50%;
     height: 600px;
     background-color: #eeeeee;
 }
-.best-today{
+
+.best-lib li {
+    margin-bottom: 20px;
+}
+
+.best-today li {
+    margin-bottom: 35px;
+    text-align: center;
+}
+
+.best-today {
     width: 50%;
     height: 600px;
     background-color: #eeeeee;
 
 }
-.bottom{
+
+.bottom {
     width: 100%;
     background-color: #eeeeee;
     height: 300px;
     text-align: center;
 }
-.footer{
-    top: 0; bottom: 0; left: 0; right: 0;
+
+.footer {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background-color: #a7b8c4;
     height: 70px;
 }
+
 .header img {
     float: left;
     width: 100px;
     height: 100px;
 }
-.header h1{
+
+.header h1 {
     position: relative;
     top: 30px;
     left: 10px;
     margin-left: 100px;
 }
-header a{
+
+header a {
     text-decoration: none;
     color: white;
 }
+
 a:hover {
     color: #a7b8c4;
 }
+
 .logo {
     float: left;
-    position:absolute;
+    position: absolute;
 }
+
 nav {
     float: left;
 }
+
 nav ul {
     margin-left: 320px;
     padding-top: 20px;
     list-style: none;
 }
+
 nav li {
     display: inline-block;
     padding: 20px;
     font-size: 20px;
 }
-.search{
+
+.search {
     padding-top: 40px;
     padding-left: 60px;
 }
-.bottom-text{
+
+.bottom-text {
     font-family: 'Alegreya', serif;
     text-align: center;
     font-size: 30px;
 }
-.bottom ul{
+
+.bottom ul {
     list-style: none;
     font-family: "Open Sans", sans-serif;
     font-size: 25px;
 }
 
+.best-lib ul {
+    width: 300px;
+    margin: auto;
+}
 
+.best-today ul {
+    width: 300px;
+    margin: auto;
+}
+
+h4 {
+    margin-top: 90px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.best-today a:active {
+    color: maroon;
+}
 
 
