--- a/style/lab.css
+++ b/style/lab.css
@@ -61,12 +61,12 @@ body {
 
 .left_nav {
     display: inline-table;
-    margin: 78px 0px 0px 5px;
+    position: fixed;
 }
 
 .left_nav .left_nav_div {
     background-color: rgb(255, 255, 255);
-    margin: 30px 0px;
+    margin: 10px 0px;
     padding: 15px;
     border-radius: 10px;
     border: 1px solid rgb(128, 128, 128);
@@ -161,8 +161,9 @@ body {
 }
 
 .content {
-    width: 75%;
-    margin: 55px;
+    width: 65%;
+    margin-top: 55px;
+    margin-left: 20%;
     padding: 10px 50px;
     background-color: rgb(255, 255, 255);
     border: 1px solid rgb(128, 128, 128);
@@ -202,4 +203,9 @@ button a {
     text-decoration: none;
     font-size: 12pt;
 }
-
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+}
