--- a/style/bar..css
+++ b/style/bar..css
@@ -64,3 +64,48 @@
     opacity: 1;
     transform: rotateY(0)
 }
+
+*{
+    padding: 0;
+    margin: 0;
+
+}
+li{
+    list-style: none;
+}
+ul.child{
+    display: none;
+    width: 100%!important;
+}
+ul.child > li{
+    height: 50px;
+    background-color: #00acee;
+    font-family: Arial;
+    font-size: 17px;
+    padding-top: 13px;
+    border-top: 2px white solid;
+}
+ul.parent > li{
+    float: left;
+    width: 20%;
+    text-align: center;
+    height: 50px;
+    padding-top: 13px;
+    background-color: #3b5998;
+    border-right: 2px white solid;
+    cursor: pointer;
+    font-family: Arial;
+    font-size: 20px;
+    color: white;
+    box-sizing: border-box;
+}
+input{
+    margin: 20px;
+}
+.informers{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+
+    box-sizing: border-box;
+}
